<resources>
    <string name="app_name">parcial-2-am-acn4bv-gustavo-vera</string>
    <string name="hint_on_pass_input">Ingresar contraseña</string>
    <string name="text_on_btn_login">INGRESAR</string>
    <string name="text_on_btn_register">REGISTRARME</string>
    <string name="hint_on_input_email">Ingresar email</string>
    <string name="text_on_btn_logout">Logout</string>
    <string name="text_msj_sin_conexion">Sin conexión a internet</string>
    <string name="text_btn_reintentar_conexion">REINTENTAR</string>
    <string name="content_description_image">Movie Cover Image</string>
    <string name="text_titulo_home">PELICULAS</string>
    <string name="txt_btn_register">REGISTRAR</string>
    <string name="hint_nombre_registro">Ingresar nombre</string>
    <string name="hint_apellido_registro">Ingresar apellido</string>
    <string name="hint_mail_registro">Ingresar email</string>
    <string name="hint_contrasena_registro">Ingresar contraseña</string>
</resources>