<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/hint_nombre_registro"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_apellido_registro"
        android:inputType="textPersonName"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/emailInputRegister"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_mail_registro"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <EditText
        android:id="@+id/passwordInputRegister"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint_contrasena_registro"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/txt_btn_register"
        android:onClick="onButtonRegisterClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>